k8s/manifests/platform/gateway/components/v1.6.1/validatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  annotations:
    gateway.networking.k8s.io/bundle-version: v1.6.1
    gateway.networking.k8s.io/channel: standard
  name: safe-upgrades.gateway.networking.k8s.io
spec:
  policyName: safe-upgrades.gateway.networking.k8s.io
  validationActions:
    - Deny
  matchResources:
    resourceRules:
      - apiGroups:
          - apiextensions.k8s.io
        apiVersions:
          - v1
        resources:
          - customresourcedefinitions
        operations:
          - CREATE
          - UPDATE
